--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					   					<div class="desc">
 						   					<h1 style="color: white;">Hi! <br>I'm Shweta</h1>
 						   					<h2>Creative and skilled Frontend Developer experienced in building responsive, user-friendly websites with clean code and seamless cross-platform performance. </h2>
-												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="ShwetaMaurya.pdf" >Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
